# factorized-latent-world-models

./: .gitignore  README.md  pyproject.toml
docs/: architecture_rethink.md  architecture_review.md  system_redesign_memo.md
notebooks/: factor_latent_wm_colab.ipynb
src/factor_latent_wm/: __init__.py
src/factor_latent_wm/cli/: main.py
src/factor_latent_wm/config/: __init__.py  core.py
src/factor_latent_wm/data/: __init__.py  dataset.py  generate.py
src/factor_latent_wm/envs/: __init__.py  multi_object_env.py
src/factor_latent_wm/models/: __init__.py  baselines.py  components.py  factor_model.py
src/factor_latent_wm/planning/: __init__.py  cem.py
src/factor_latent_wm/training/: __init__.py  losses.py  stages.py
src/factor_latent_wm/utils/: __init__.py  seeding.py
tests/: test_dataset.py  test_env.py  test_models.py
