[project]
name = "factor-latent-wm"
version = "0.1.0"
description = "Factorised latent-action world model for multi-object environments"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=2.0",
  "torch>=2.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
colab = [
  "matplotlib>=3.9",
  "pandas>=2.2",
]

[project.scripts]
flwm = "factor_latent_wm.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
